[package]
name = "mini-bot"
version = "0.1.0"
authors = ["fnareoh <garance.gourdel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["time","macros", "rt-multi-thread"] }
chrono = { version = "0.4.23" }